saga-service/src/main/kubernetes/Deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: saga-service
    version: v1
  name: saga-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saga-service
      version: v1
  template:
    metadata:
      labels:
        app: saga-service
        version: v1
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Xms128m -Xmx256m -Djava.net.preferIPv4Stack=true -Djava.security.egd=file:///dev/./urandom
        image: xstefank/saga-service:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - curl
            - localhost:8080/api/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
        name: customer
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - curl
            - localhost:8080/api/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
        securityContext:
          privileged: false
