saga-service/src/main/kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: saga-service
  labels:
    expose: "true"
    app: saga-service
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: saga-service
