saga-service/src/main/kubernetes/Route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: saga-service
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: org.xstefank.lra
  name: saga-service
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: saga-service
